# tui-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  beast-manager.c  beast-manager.h  bot-client.c  client.c  config.h  server.c
game/: entity.h  tile.h  world.c  world.h
res/: map-small.ppm  map-small.xcf  map.ppm  map.xcf
util/: api.c  api.h  color.h  image.c  image.h  socket.c  socket.h
